--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
-doctype <html>
+<!DOCTYPE html>
     <meta lang="pt-br">
 
     <head>
         <title> Resistência em Zion </title>
         <meta charset="utf-8">
-        <meta name="resitenciaemZion">
         <link rel="stylesheet" type="text/css" href="bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="css/style.css"> 
 
     </head>
     <body>
-        
+        <nav class="navbar-expand-lg navbar-light">
+            <a class="navbar-expand-lg" href="">
+                    <img src="img/icones/militancia oficial.jpg" width="220" height="220">
+                    </a>        
     </body>
 </html>
