site estruturado falta inovações

--- a/index.html
+++ b/index.html
@@ -8,32 +8,32 @@
 
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar light">
+        <nav class="navbar navbar-expand-lg navbar-dark">
             <a class=" navbar-brand" href="#">
                 <img src="img/icones/militancia oficial.jpg" class="rounded-circle" width="200" height="200"> 
             </a>
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Apresentação</a>
+                        <a class="nav-link" href="#Apresentação" >Apresentação</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Quem somos</a>
+                        <a class="nav-link" href="#Quemsomos">Quem somos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Aos pais e alunos</a>
+                        <a class="nav-link" href="#Aospais">Aos pais e alunos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Aos professores</a>
+                        <a class="nav-link" href="#Aosprofessores">Aos professores</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Militância</a>
+                        <a class="nav-link" href="#Militância">Militância</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Sala de aula</a>
+                        <a class="nav-link" href="#Sala">Sala de aula</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Fale conosco</a>
+                        <a class="nav-link" href="#Faleconosco">Fale conosco</a>
                     </li>
                 </ul>
             </div>
@@ -202,4 +202,8 @@
             </div>
         </section>
     </body>
+    <footer class="container-fluid text-center bg-footer margin">
+        <p>Desenvolvido por Daratilde Santana</p>
+        <p>2021</p>
+    </footer>
 </html>
