--- a/index.html
+++ b/index.html
@@ -159,8 +159,7 @@
                                 #militanciaon #militanciaeresistenciaon #educacaotecnologica #educacaopublicadequalidadeon
                                 </p>  
                         </div>                        
-                    </div>  
-            
+                    </div>
             </div>
         </section>
         <section id="Sala">
@@ -170,15 +169,19 @@
                     <div class="row">
                         <div class="col lg 4">
                             <img src="img/body/pexels-pixabay-289737.jpg" class="rounded-circle" width="80%"> 
-                            <h3>Materiais da aula</h3>
+                                <h3>Materiais da aula e militância</h3>
+                                    <a href="https://drive.google.com/drive/folders/1orMFkh_D3A455k-zqemJOs5utQ0o8z3u?usp=sharing">Pasta #militanciaon</a>
+                               
                         </div>
                         <div class="col lg 4">
                             <img src="img/icone do canal.jpg" class="rounded-circle" width="80%"> 
                             <h3>Sala de aula online</h3>
+                                <a href="https://msngr.com/tkatsmrcobfr">Sala da Daratilde (Messenger)</a>
                         </div>
                         <div class="col lg 4">
                             <img src="img/body/pexels-andrea-piacquadio-3769138.jpg" class="rounded-circle" width="80%">
                             <h3>Links interessantes</h3> 
+                                <a href="https://docs.google.com/spreadsheets/d/1C7HdkTpr_rrrzN-I9yg6qv_IL7JzVwNfh54SR87btlE/edit?usp=sharing">Lista em atualização sempre, acesse!</a>
                         </div>
                     </div>
                 </div>
